[package]
name = "pg-sse"
version = "0.1.0"
authors = ["Klein Florian <florian.klein@free.fr>"]
edition = "2018"

[dependencies]
postgres = { version = "0.15.2", features = ["with-uuid"]}
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
fallible-iterator = "0.1.6"
httparse = "1.3.4"
uuid = { version = "0.5", features = ["v4"]}
